--- a/client/src/componets/login/Login.module.css
+++ b/client/src/componets/login/Login.module.css
@@ -20,11 +20,14 @@
 
 .inputContainer label{
     display: block;
+    margin-top: 30px;
+    font-weight: 600;
 }
 
 .inputContainer input{
-    background-color: black;
-    color:white;
+    width: 100%;
+    background-color: #e8f0fe;
+    color:black;
     padding: 15px;
     border-radius: .5rem;
     display: block;
@@ -33,5 +36,57 @@
 }
 
 .loginBTN{
+    border: none;
+    width: 100%;
+    padding: 15px;
+    border-radius: .5rem;
+    margin-top: 7px;
+    margin-bottom: 7px;
+    background-color: red;
+    color:white;
+    transition: all 0.4s;
+    margin-top: 20px;
+}
+
+.loginBTN:hover{
+    transition: all 0.4s;
+    background-color: white;
+    border: 1px solid red;
+    color: black;
+}
+
+.loginContainerv2{
+    width: 500px;
+    background-color: #f1f1f1;
+    padding: 40px;
+    border-radius: .5rem;
+}
+.loginContainerv2 h1{
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.or{
+    display: block;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.googleBTN{
+    padding: 15px;
+    width: 100%;
+    border: 0px none;
+    background-color: #797389;
+    border-radius: .5rem;
+    color:white;
+    transition: all 0.4s;
+}
+
+.googleBTN:hover{
+    transition: all 0.4s;
+    background-color: white;
+    border: 1px solid black;
+    color: black;
 
 }
